# crazyflie-project

./: .gitignore  README.md
Documentation/: Report.bbl  (+2 more)
crazy_ros/: CMakeLists.txt  init.sh  package.xml
crazy_ros/bagfiles/: 2016-05-04-16-07-50.bag  2016-05-04-16-09-08.bag
crazy_ros/config/: configparam.cnf  create_configuration.py
crazy_ros/examples/: quad_classes.py  simulate_quadcopter_PD.py  simulate_quadcopter_process.py  simulate_system.py
crazy_ros/launch/: crazy.launch  kinect.launch
crazy_ros/modules/: README.txt  crazylib.py  solver.h  sum.c
crazy_ros/modules/cvxgen/: Makefile  ROS_solver.c  csolve.c  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  testsolver  testsolver.c  util.c
crazy_ros/modules/examples/: kinect_AKF.py  kinect_KF.py  kinect_KF2.py  kinect_KF_3D_double_integrator.py  mpc_cython_sum.py  quadcopter_dynamic2.py
crazy_ros/msg/: NumpyArrayFloat64.msg
crazy_ros/scripts/: MPCController.py  PIDController.py  cmd_vel_test_publisher.py  dummyCamera.py  kinectLink.py  kinectNode.py  kinectReader.py  master.py  masterNode.py  outerPIDNode.py  quadcopterModel.py  referenceGenerator.py
crazyflie_trajectory/: CMakeLists.txt  package.xml
crazyflie_trajectory/docs/source/: conf.py  index.rst
crazyflie_trajectory/launch/: convertData.launch  sequenceDevel.launch  trajectoryExample.launch
crazyflie_trajectory/modules/: trajectorylib.py
crazyflie_trajectory/scripts/: converter.py  master.py
crazyflie_trajectory/trajectories/: createTrajectory.py  p_2.json  saved_trajectory.json  t_1_event.json
(+511 files in other folders)
